--- a/feature/src/main/res/layout/activity_main.xml
+++ b/feature/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-\    <android.support.v4.view.ViewPager
+    <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
