--- a/feature/src/main/res/layout/activity_main.xml
+++ b/feature/src/main/res/layout/activity_main.xml
@@ -22,7 +22,10 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:tabMaxWidth="0dp"
+            app:tabGravity="fill"
+            app:tabMode="fixed">
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabDraw"
