--- a/feature/src/main/res/drawable/ic_draw_24dp.xml
+++ b/feature/src/main/res/drawable/ic_draw_24dp.xml
@@ -9,22 +9,30 @@
     <group android:name="compass">
 
         <path
-            android:name="legs"
-            android:pathData="M 20,23
-            l -7,-14
-            a 3,3, 0 1 0 -2,0
-            l -7,14"
+            android:name="spring"
+            android:pathData="M 13,11
+            a 4,4, 0 1 0 -2,0"
             android:strokeColor="@android:color/white"
             android:strokeLineCap="square"
-            android:strokeWidth="1" />
+            android:strokeWidth="2" />
+
+        <path
+            android:name="legs"
+            android:pathData="M 22,23
+            l -7,-13
+            m -6,0
+            l -7,13"
+            android:strokeColor="@android:color/white"
+            android:strokeLineCap="round"
+            android:strokeWidth="2" />
 
         <path
             android:name="hinge"
-            android:pathData="M 7,14
-            a 9,9, 0 0 0 13,-8"
+            android:pathData="M 4,14
+            a 11,11, 0 0 0 18,-8"
             android:strokeColor="@android:color/white"
             android:strokeLineCap="round"
-            android:strokeWidth="1" />
+            android:strokeWidth="2" />
 
         <path
             android:name="handle"
@@ -32,7 +40,7 @@
             v 2"
             android:strokeColor="@android:color/white"
             android:strokeLineCap="round"
-            android:strokeWidth="1" />
+            android:strokeWidth="2" />
 
     </group>
 
