--- a/feature/src/main/res/layout/activity_main.xml
+++ b/feature/src/main/res/layout/activity_main.xml
@@ -29,15 +29,19 @@
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabDraw"
+                android:contentDescription="@string/tab_draw"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:icon="@drawable/ic_draw_24dp"
                 android:text="@string/tab_draw" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabAnalyze"
+                android:contentDescription="@string/tab_analyze"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tab_analyze" />
+                android:icon="@drawable/ic_analyze_24dp"
+                android:text="@string/tab_analyze"/>
 
         </android.support.design.widget.TabLayout>
 
