--- a/feature/src/main/res/menu/menu_main.xml
+++ b/feature/src/main/res/menu/menu_main.xml
@@ -2,6 +2,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.bessermt.trisolve.feature.MainActivity">
+
+    <group android:id="@+id/transform">
+        <item
+            android:id="@+id/action_translate"
+            android:icon="@drawable/ic_translate_24dp"
+            android:title="@string/action_translate"
+            app:showAsAction="ifRoom"/>
+        <item
+            android:id="@+id/action_rotate"
+            android:icon="@drawable/ic_translate_24dp"
+            android:title="@string/action_rotate"
+            app:showAsAction="ifRoom"/>
+        <item
+            android:id="@+id/action_reflect"
+            android:icon="@drawable/ic_translate_24dp"
+            android:title="@string/action_reflect"
+            app:showAsAction="ifRoom"/>
+        <item
+            android:id="@+id/action_dilate"
+            android:icon="@drawable/ic_translate_24dp"
+            android:title="@string/action_dilate"
+            app:showAsAction="ifRoom"/>
+    </group>
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
