--- a/feature/src/main/res/menu/menu_main.xml
+++ b/feature/src/main/res/menu/menu_main.xml
@@ -3,28 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.bessermt.trisolve.feature.MainActivity">
 
-    <group android:id="@+id/transform">
-        <item
-            android:id="@+id/action_translate"
-            android:icon="@drawable/ic_translate_24dp"
-            android:title="@string/action_translate"
-            app:showAsAction="ifRoom"/>
-        <item
-            android:id="@+id/action_rotate"
-            android:icon="@drawable/ic_rotate_24dp"
-            android:title="@string/action_rotate"
-            app:showAsAction="ifRoom"/>
-        <item
-            android:id="@+id/action_reflect"
-            android:icon="@drawable/ic_reflect_24dp"
-            android:title="@string/action_reflect"
-            app:showAsAction="ifRoom"/>
-        <item
-            android:id="@+id/action_dilate"
-            android:icon="@drawable/ic_dilate_24dp"
-            android:title="@string/action_dilate"
-            app:showAsAction="ifRoom"/>
-    </group>
+    <item
+        android:id="@+id/transform"
+        android:icon="@drawable/ic_transform_24dp"
+        android:title="@string/action_transform"
+        app:showAsAction="ifRoom|collapseActionView">
+
+        <menu>
+            <item
+                android:id="@+id/action_translate"
+                android:icon="@drawable/ic_translate_24dp"
+                android:title="@string/action_translate"
+                app:showAsAction="ifRoom|collapseActionView"/>
+            <item
+                android:id="@+id/action_rotate"
+                android:icon="@drawable/ic_rotate_24dp"
+                android:title="@string/action_rotate"
+                app:showAsAction="ifRoom|collapseActionView"/>
+            <item
+                android:id="@+id/action_reflect"
+                android:icon="@drawable/ic_reflect_24dp"
+                android:title="@string/action_reflect"
+                app:showAsAction="ifRoom|collapseActionView"
+                app:actionProviderClass="com.bessermt.trisolve.feature.ReflectActionProvider" />
+            <item
+                android:id="@+id/action_dilate"
+                android:icon="@drawable/ic_dilate_24dp"
+                android:title="@string/action_dilate"
+                app:showAsAction="ifRoom|collapseActionView"/>
+        </menu>
+    </item>
 
     <item
         android:id="@+id/action_settings"
